--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -38,6 +38,11 @@
       <artifactId>json-simple</artifactId>  
       <version>1.1</version>  
     </dependency>  
+    <dependency>
+  <groupId>com.google.appengine</groupId>
+  <artifactId>appengine-api-1.0-sdk</artifactId>
+  <version>1.9.59</version>
+</dependency>
   </dependencies>
 
   <build>
